--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  padding: 70px;
+  margin-top: 70px;
   font-family: "Source Sans Pro", sans-serif;
 }
 
@@ -144,8 +144,12 @@ body {
   margin: 30px 0;
 }
 
+.container {
+  min-width: 1100px;
+}
+
 .container-body {
-  min-height: 800px;
+  min-height: 900px;
 }
 
 .container-full-width {
