--- a/app/styles/publicds.css
+++ b/app/styles/publicds.css
@@ -6,8 +6,8 @@
     overflow-y: auto;
     padding-top: 10px;
     width: 256px;
-    min-height: 875px;
-    max-height: 875px;
+    min-height: 84%;
+    max-height: 84%;
     position: absolute;;
 }
 
@@ -99,9 +99,58 @@
   max-width: 30%;
 }
 
+.publicdataset-view-rating > div > span {
+  float: right;
+}
+
+.publicdataset-view-rating > div > a {
+  float: right;
+  cursor: pointer;
+}
+
+.publicdataset-view-rating > div > a:hover {
+  float: right;
+  text-decoration: none;
+  color: rgb(3, 155, 229);
+}
+
 .publicdataset-view-content {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 30px;
+}
+
+.ds-panel-heading > a {
+  cursor: pointer;
+  color: rgb(38, 38, 38);
+}
+
+.ds-panel-heading > a:hover {
+  cursor: pointer;
+  color: rgb(3, 155, 229);
+}
+
+.publicdataset-comment-img {
+  padding-right: 10px;
+}
+
+.publicdataset-comment-msg {
+  padding-left: 40px;
+  margin-top: 10px;
+}
+
+.publicdataset-comment > textarea{
+  resize: vertical;
+  width: 95%;
+}
+
+.publicdataset-comment > button{
+  margin-top: 10px;
+}
+
+.highlighted {
+  font-weight: normal;
+  font-style: italic;
+  color: #337ab7;
 }
 
 #publicdataset::-webkit-scrollbar-track {
