--- a/app/views/publicdataset.html
+++ b/app/views/publicdataset.html
@@ -63,8 +63,10 @@
   <div ng-if="publicDataset.selected !== undefined">
     <h4 class="publicdataset-view-heading">{{publicDataset.selected}}</h4>
     <div class="publicdataset-view-rating">
-      <div class="text-muted" ng-init="y = 2"><span uib-rating ng-model="y" aria-labelledby="custom-icons-2">
-        </span> <b>(<i>Rate this dataset: </i> {{y}})</b>
+      <div class="text-muted" ng-init="y = 2">
+        <span uib-rating ng-model="y" aria-labelledby="custom-icons-2"></span>
+        <br/>
+        <a ng-click="publicDataset.gotoComment()"><b>ADD COMMENT</b></a>
       </div>
     </div>
   </div>
@@ -74,8 +76,8 @@
   <br>
   <div ng-if="publicDataset.selected === undefined" class="publicdataset-view-content">
     <div class="panel panel-default" ng-repeat="ds in publicDataset.selectedDsList">
-      <div class="panel-heading">
-        {{ds}}
+      <div class="panel-heading ds-panel-heading" ng-click="publicDataset.selected = ds">
+        <a ng-click="publicDataset.selected = ds">{{ds}}</a>
         <p class="pull-right text-muted"><span uib-rating ng-model="y" aria-labelledby="custom-icons-2"></span></p>
       </div>
       <div class="panel-body">Discription of this dataset.</div>
@@ -84,8 +86,32 @@
   <div ng-if="publicDataset.selected !== undefined" class="publicdataset-view-content">
     <div class="panel panel-default">
       <div class="panel-heading">README.md</div>
-      <div ng-if="publicDataset.selected !== 'Open Street Map'" class="panel-body">No readme file</div>
+      <div ng-if="publicDataset.selected !== 'Open Street Map'" class="panel-body">No readme file.</div>
       <div ng-if="publicDataset.selected === 'Open Street Map'" class="panel-body" ng-bind-html="publicDataset.readme"></div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">COMMENTS</div>
+      <div class="panel-body">
+        <div ng-if="publicDataset.selected !== 'IRS 990 Data'" ng-repeat="comment in publicDataset.comments">
+          <img class="publicdataset-comment-img pull-left" src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=30">
+          <div class="publicdataset-comment">
+            <span class="text-muted"><b>{{comment.name}}</b> commented | on {{comment.date | date:'medium'}}</span>
+            <div class="publicdataset-comment-msg" ng-bind-html="comment.message | highlight"></div>
+          </div>
+          <hr>
+        </div>
+        <div ng-if="publicDataset.selected === 'IRS 990 Data'" >
+          <p>No comments found.</p>
+          <hr>
+        </div>
+        <div>
+          <img class="publicdataset-comment-img pull-left" src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=30">
+          <div class="publicdataset-comment">
+            <textarea  placeholder="Add your comment... " class="form-control"></textarea>
+            <button type="button" class="btn pull-right" id="commentbtn">ADD COMMENT</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </article>
