--- a/app/views/publicdataset.html
+++ b/app/views/publicdataset.html
@@ -85,7 +85,8 @@
   </div>
   <div ng-if="publicDataset.selected !== undefined" class="publicdataset-view-content">
     <div class="panel panel-default">
-      <div class="panel-heading">README.md</div>
+      <div class="panel-heading">README.md <a class="publicdataset-issue pull-right text-muted"
+           title="Report issues with licence, content of the dataset, or the documentation.">Report issue</a></div>
       <div ng-if="publicDataset.selected !== 'Open Street Map'" class="panel-body">No readme file.</div>
       <div ng-if="publicDataset.selected === 'Open Street Map'" class="panel-body" ng-bind-html="publicDataset.readme"></div>
     </div>
@@ -97,6 +98,7 @@
           <div class="publicdataset-comment">
             <span class="text-muted"><b>{{comment.name}}</b> commented | on {{comment.date | date:'medium'}}</span>
             <div class="publicdataset-comment-msg" ng-bind-html="comment.message | highlight"></div>
+            <a class="publicdataset-issue text-muted pull-right" title="You can report content that violate the law or our Terms and Conditions.">Report abuse</a>
           </div>
           <hr>
         </div>
